fix : security config